--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 
   <!-- SCRIPT -->
   <script>
-    const correctName = "bryan";
+    const correctName = "Paakwesi";
     const input = document.getElementById('nameInput');
     const error = document.getElementById('error');
     const music = document.getElementById('bgm');
