--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
   <section id="page1" class="hidden min-h-screen flex flex-col items-center justify-start pt-10 pb-10">
     <div class="bg-white/90 backdrop-blur rounded-[2rem] shadow-2xl p-8 md:p-12 text-center max-w-md border border-pink-300 relative pop">
 
-      <div class="text-6xl mb-4 float">🪣💖</div>
+      <div class="text-6xl mb-4 float">💖</div>
       <h1 class="text-4xl font-bold text-pink-600 mb-2 script">Hey Baby🤍</h1>
       <p class="text-gray-600 text-lg mb-4">
         Catch all the falling hearts to unlock something special ✨
