--- a/index.html
+++ b/index.html
@@ -1,320 +1,178 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>A Little Surprise 🤍✨</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>A Little Surprise 🤍✨</title>
 
-  <!-- Tailwind -->
-  <script src="https://cdn.tailwindcss.com"></script>
+<script src="https://cdn.tailwindcss.com"></script>
+<link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 
-  <!-- Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+<style>
+body { font-family: 'Poppins', sans-serif; }
+.script { font-family: 'Pacifico', cursive; }
 
-  <style>
-    body { font-family: 'Poppins', sans-serif; }
-    .script { font-family: 'Pacifico', cursive; }
+@keyframes float { 0%,100%{transform:translateY(0)}50%{transform:translateY(-12px)} }
+@keyframes pop { 0%{transform:scale(.8);opacity:0}100%{transform:scale(1);opacity:1} }
+@keyframes drift { 0%{transform:translateY(0)}100%{transform:translateY(-120vh);opacity:0} }
+@keyframes fall { from{top:-30px}to{top:260px} }
 
-    @keyframes float {
-      0%,100% { transform: translateY(0); }
-      50% { transform: translateY(-12px); }
-    }
-
-    @keyframes pop {
-      0% { transform: scale(0.8); opacity: 0; }
-      100% { transform: scale(1); opacity: 1; }
-    }
-
-    @keyframes drift {
-      0% { transform: translateY(0) rotate(0deg); opacity: 1; }
-      100% { transform: translateY(-120vh) rotate(360deg); opacity: 0; }
-    }
-
-    @keyframes fall {
-      from { top: -30px; }
-      to { top: 260px; }
-    }
-
-    .float { animation: float 3s ease-in-out infinite; }
-    .pop { animation: pop .6s ease-out forwards; }
-
-    .heart {
-      position: absolute;
-      bottom: -20px;
-      font-size: 20px;
-      color: #ff4da6;
-      animation: drift 8s linear infinite;
-      pointer-events: none;
-    }
-
-    .falling-heart {
-      position: absolute;
-      font-size: 1.8rem;
-      animation: fall 3s linear forwards;
-      pointer-events: none;
-    }
-
-    #bucket {
-      position: absolute;
-      bottom: 6px;
-      font-size: 2.5rem;
-      user-select: none;
-      transition: left 0.1s linear;
-    }
-  </style>
+.float{animation:float 3s infinite}
+.pop{animation:pop .6s ease-out}
+.heart{position:absolute;bottom:-20px;animation:drift 8s linear;font-size:20px}
+.falling-heart{position:absolute;font-size:1.8rem;animation:fall 3s linear}
+#bucket{position:absolute;bottom:6px;font-size:2.5rem}
+</style>
 </head>
 
-<body class="bg-gradient-to-br from-white via-pink-100 to-pink-300 min-h-screen overflow-y-auto relative">
+<body class="bg-gradient-to-br from-white via-pink-100 to-pink-300 min-h-screen relative overflow-hidden">
 
-  <!-- Floating Hearts -->
-  <div id="hearts"></div>
+<div id="hearts"></div>
 
-  <!-- Background Music -->
-  <audio id="bgm" loop>
-    <source src="music.mp3" type="audio/mpeg" />
-  </audio>
+<audio id="bgm" loop>
+  <source src="music.mp3" type="audio/mpeg">
+</audio>
 
-  <!-- LOGIN PAGE -->
-  <section id="login" class="min-h-screen flex items-center justify-center pop">
-    <div class="bg-white/90 backdrop-blur rounded-[2rem] shadow-2xl p-10 max-w-md text-center border border-pink-300">
-      <h1 class="text-4xl font-bold text-pink-600 mb-4 script">Before You Enter 🤍</h1>
-      <p class="text-gray-600 mb-6">Only one name unlocks this page…</p>
+<!-- LOGIN -->
+<section id="login" class="min-h-screen flex items-center justify-center pop">
+  <div class="bg-white/90 p-10 rounded-3xl shadow-xl text-center border border-pink-300">
+    <h1 class="script text-4xl text-pink-600 mb-4">Before You Enter 🤍</h1>
+    <input id="nameInput" placeholder="Type your boyfriend's name"
+      class="w-full px-5 py-3 rounded-full border border-pink-300 text-center">
+    <p id="error" class="hidden text-pink-500 mt-2">Wrong name 👀</p>
+  </div>
+</section>
 
-      <input
-        id="nameInput"
-        type="text"
-        placeholder="Type your boyfriend's name"
-        class="w-full px-5 py-3 rounded-full border border-pink-300 focus:outline-none focus:ring-2 focus:ring-pink-400 text-center mb-4"
-      />
+<!-- PAGE 1 -->
+<section id="page1" class="hidden min-h-screen flex justify-center pt-10">
+<div class="bg-white/90 p-10 rounded-3xl shadow-xl text-center pop">
+  <div class="text-6xl float">💖</div>
+  <h1 class="script text-4xl text-pink-600">Hey Baby 🤍</h1>
 
-      <p id="error" class="text-pink-500 hidden">Hmm… that name feels wrong 👀</p>
-      <p class="text-sm text-gray-400 mt-4">Press Enter to continue ✨</p>
-    </div>
-  </section>
+  <div id="balloonArea" class="relative w-64 h-64 bg-pink-50 rounded-2xl mt-6 overflow-hidden">
+    <div id="bucket">🪣</div>
+  </div>
 
-  <!-- PAGE 1 : HEART CATCH GAME -->
-  <section id="page1" class="hidden min-h-screen flex flex-col items-center justify-start pt-10 pb-10">
-    <div class="bg-white/90 backdrop-blur rounded-[2rem] shadow-2xl p-8 md:p-12 text-center max-w-md border border-pink-300 relative pop">
+  <div id="proposal" class="hidden mt-6">
+    <h2 class="text-2xl text-pink-500 mb-4">Will you be my Valentine? 🤍</h2>
+    <button onclick="sayYes()" class="bg-pink-500 text-white px-6 py-3 rounded-full">Yes 😍</button>
+    <button id="noBtn" onmouseover="moveNo()" class="ml-2 bg-pink-100 px-6 py-3 rounded-full">No 🙈</button>
+  </div>
+</div>
+</section>
 
-      <div class="text-6xl mb-4 float">💖</div>
-      <h1 class="text-4xl font-bold text-pink-600 mb-2 script">Hey Baby🤍</h1>
-      <p class="text-gray-600 text-lg mb-4">
-        Catch all the falling hearts to unlock something special ✨
-      </p>
+<!-- PAGE 2 -->
+<section id="page2" class="hidden min-h-screen flex justify-center pt-10">
+<div class="bg-white/90 p-10 rounded-3xl shadow-xl text-center pop">
+  <h2 class="script text-4xl text-pink-600 mb-6">For You 🤍</h2>
+  <p class="text-gray-700">You make life sweeter just by being you 💕</p>
+  <button onclick="goToGiftPage()" class="mt-6 bg-pink-500 text-white px-8 py-3 rounded-full">
+    Continue 💕
+  </button>
+</div>
+</section>
 
-      <div id="balloonArea" class="relative w-full h-64 bg-pink-50 rounded-2xl mb-6 overflow-hidden">
-        <div id="bucket">🪣</div>
-      </div>
+<!-- PAGE 3 -->
+<section id="page3" class="hidden min-h-screen flex justify-center pt-10">
+<div class="bg-white/90 p-10 rounded-3xl shadow-xl text-center pop max-w-md">
 
-      <div id="proposal" class="hidden pop">
-        <h2 class="text-2xl font-semibold text-pink-500 mb-6">
-          Will you be my Valentine? 🤍
-        </h2>
+  <h2 class="script text-4xl text-pink-600 mb-4">One More Thing 🤍</h2>
 
-        <div class="flex justify-center gap-4">
-          <button onclick="sayYes()"
-            class="bg-pink-500 hover:bg-pink-600 text-white px-7 py-3 rounded-full text-lg font-bold transition hover:scale-110 shadow-lg">
-            Yes 😍
-          </button>
+  <textarea id="giftInput" rows="4"
+    class="w-full p-4 border border-pink-300 rounded-2xl"
+    placeholder="I would love something like… 💝"></textarea>
 
-          <button id="noBtn" onmouseover="moveNo()"
-            class="bg-pink-100 text-pink-600 px-7 py-3 rounded-full text-lg font-semibold transition">
-            No 🙈
-          </button>
-        </div>
-      </div>
+  <button onclick="submitGift()" class="mt-4 bg-pink-500 text-white px-6 py-3 rounded-full">
+    Save Gift 💌
+  </button>
 
-      <div class="mt-4">
-        <button onclick="signOut()"
-          class="bg-pink-400 hover:bg-pink-500 text-white px-5 py-2 rounded-full text-sm font-semibold transition hover:scale-105 shadow-md">
-          Sign Out
-        </button>
-      </div>
-    </div>
-  </section>
+  <button onclick="viewGift()" class="mt-3 bg-pink-100 text-pink-600 px-6 py-2 rounded-full">
+    View Your Valentine’s Gift Request 💝
+  </button>
 
-  <!-- PAGE 2 : SPECIAL MESSAGE -->
-  <section id="page2" class="hidden min-h-screen flex flex-col items-center justify-start pt-10 pb-10">
-    <div class="bg-white/90 backdrop-blur rounded-[2rem] shadow-2xl p-10 max-w-lg text-center border border-pink-300 pop">
-      <h2 class="text-4xl font-bold text-pink-600 mb-6 script">For You 🤍</h2>
+  <button onclick="sendGiftWhatsApp()" class="mt-3 bg-green-500 text-white px-6 py-3 rounded-full">
+    Send via WhatsApp 💚
+  </button>
 
-      <p class="text-gray-700 text-lg leading-relaxed">
-        You have a way of making ordinary moments feel special.
-        Your smile, your kindness, your presence—they mean more to me than you know.
-        I’m grateful for you today and always, and I’m happy to share this love-filled day with you. 💕
-      </p>
+  <p id="giftThanks" class="mt-4 text-pink-500 font-semibold hidden"></p>
+</div>
+</section>
 
-      <p class="mt-8 text-2xl font-semibold text-pink-500">
-        Happy Valentine’s Day ✨
-      </p>
+<script>
+const correctName = "Paakwesi";
+let savedGift = "";
+let heartsCaught = 0;
 
-      <button onclick="goToGiftPage()"
-        class="mt-6 bg-pink-500 hover:bg-pink-600 text-white px-7 py-3 rounded-full text-lg font-semibold transition hover:scale-110 shadow-lg">
-        Continue 💕
-      </button>
-    </div>
-  </section>
+const input = document.getElementById("nameInput");
+const music = document.getElementById("bgm");
 
-  <!-- PAGE 3 : GIFT PREFERENCE -->
-  <section id="page3" class="hidden min-h-screen flex flex-col items-center justify-start pt-10 pb-10">
-    <div class="bg-white/90 backdrop-blur rounded-[2rem] shadow-2xl p-10 max-w-lg text-center border border-pink-300 pop">
+input.addEventListener("keydown", e => {
+  if (e.key === "Enter" && input.value.toLowerCase() === correctName.toLowerCase()) {
+    login.classList.add("hidden");
+    page1.classList.remove("hidden");
+    music.play();
+    startGame();
+  } else if (e.key === "Enter") {
+    error.classList.remove("hidden");
+  }
+});
 
-      <h2 class="text-4xl font-bold text-pink-600 mb-4 script">
-        One More Thing 🤍
-      </h2>
+function startGame() {
+  setInterval(() => {
+    const h = document.createElement("div");
+    h.className = "falling-heart";
+    h.textContent = "💖";
+    h.style.left = Math.random() * 80 + "%";
+    balloonArea.appendChild(h);
 
-      <p class="text-gray-600 mb-6">
-        Tell me what gift would make you smile the most ✨
-      </p>
-
-      <textarea
-        id="giftInput"
-        rows="4"
-        placeholder="I would love something like… 💝"
-        class="w-full p-4 rounded-2xl border border-pink-300 focus:outline-none focus:ring-2 focus:ring-pink-400 resize-none text-gray-700"
-      ></textarea>
-
-      <button onclick="submitGift()"
-        class="mt-6 bg-pink-500 hover:bg-pink-600 text-white px-8 py-3 rounded-full text-lg font-bold transition hover:scale-110 shadow-lg">
-        Submit 💌
-      </button>
-
-      <p id="giftThanks" class="hidden mt-6 text-pink-500 font-semibold text-lg">
-        Noted with love 🤍✨
-      </p>
-
-      <div class="mt-6">
-        <button onclick="signOut()"
-          class="bg-pink-400 hover:bg-pink-500 text-white px-5 py-2 rounded-full text-sm font-semibold transition hover:scale-105 shadow-md">
-          Sign Out
-        </button>
-      </div>
-    </div>
-  </section>
-
-  <!-- SCRIPT -->
-  <script>
-    const correctName = "Paakwesi";
-    const input = document.getElementById('nameInput');
-    const error = document.getElementById('error');
-    const music = document.getElementById('bgm');
-
-    const balloonArea = document.getElementById('balloonArea');
-    const proposal = document.getElementById('proposal');
-    const bucket = document.getElementById('bucket');
-
-    let heartsCaught = 0;
-    const heartsNeeded = 6;
-    let gameInterval;
-
-    input.addEventListener('keydown', e => {
-      if (e.key === 'Enter') {
-        if (input.value.trim().toLowerCase() === correctName.toLowerCase()) {
-          document.getElementById('login').classList.add('hidden');
-          document.getElementById('page1').classList.remove('hidden');
-          music.play();
-          startGame();
-        } else {
-          error.classList.remove('hidden');
-        }
+    const check = setInterval(() => {
+      if (h.getBoundingClientRect().bottom >= bucket.getBoundingClientRect().top) {
+        h.remove(); heartsCaught++;
+        if (heartsCaught >= 6) proposal.classList.remove("hidden");
+        clearInterval(check);
       }
-    });
+    }, 50);
+  }, 900);
+}
 
-    function startGame() {
-      balloonArea.querySelectorAll('.falling-heart').forEach(h => h.remove());
-      proposal.classList.add('hidden');
-      heartsCaught = 0;
-      bucket.style.left = '40%';
-      clearInterval(gameInterval);
-      gameInterval = setInterval(createFallingHeart, 900);
-    }
+balloonArea.addEventListener("mousemove", e => {
+  bucket.style.left = e.offsetX - 20 + "px";
+});
 
-    function createFallingHeart() {
-      const heart = document.createElement('div');
-      heart.className = 'falling-heart';
-      heart.textContent = '💖';
-      heart.style.left = Math.random() * 90 + '%';
-      balloonArea.appendChild(heart);
+function sayYes(){ page1.classList.add("hidden"); page2.classList.remove("hidden"); }
+function goToGiftPage(){ page2.classList.add("hidden"); page3.classList.remove("hidden"); }
 
-      const checkCatch = setInterval(() => {
-        const hRect = heart.getBoundingClientRect();
-        const bRect = bucket.getBoundingClientRect();
+function submitGift(){
+  savedGift = giftInput.value.trim();
+  giftThanks.textContent = savedGift ? "Saved with love 🤍✨" : "Please type something 💝";
+  giftThanks.classList.remove("hidden");
+}
 
-        if (
-          hRect.bottom >= bRect.top &&
-          hRect.left < bRect.right &&
-          hRect.right > bRect.left
-        ) {
-          heart.remove();
-          clearInterval(checkCatch);
-          heartsCaught++;
+function viewGift(){
+  giftThanks.textContent = savedGift ? `Your gift request 💝: "${savedGift}"` : "No gift request yet 🤍";
+  giftThanks.classList.remove("hidden");
+}
 
-          if (heartsCaught >= heartsNeeded) {
-            clearInterval(gameInterval);
-            proposal.classList.remove('hidden');
-          }
-        }
+function sendGiftWhatsApp(){
+  if(!savedGift){ viewGift(); return; }
 
-        if (hRect.top > window.innerHeight) {
-          heart.remove();
-          clearInterval(checkCatch);
-        }
-      }, 50);
-    }
+  const phoneNumber = "233537682660"; // 🔴 CHANGE THIS
+  const message = `Hey my love 🤍✨\n\nMy Valentine’s gift request is:\n"${savedGift}" 💝`;
+  window.open(`https://wa.me/${phoneNumber}?text=${encodeURIComponent(message)}`, "_blank");
+}
 
-    balloonArea.addEventListener('mousemove', e => {
-      const rect = balloonArea.getBoundingClientRect();
-      let x = e.clientX - rect.left - 20;
-      x = Math.max(0, Math.min(x, rect.width - 40));
-      bucket.style.left = x + 'px';
-    });
+function moveNo(){
+  noBtn.style.transform = `translate(${Math.random()*200-100}px,${Math.random()*200-100}px)`;
+}
 
-    function sayYes() {
-      document.getElementById('page1').classList.add('hidden');
-      document.getElementById('page2').classList.remove('hidden');
-    }
-
-    function goToGiftPage() {
-      document.getElementById('page2').classList.add('hidden');
-      document.getElementById('page3').classList.remove('hidden');
-    }
-
-    function submitGift() {
-      const gift = document.getElementById('giftInput').value.trim();
-      if (gift !== "") {
-        document.getElementById('giftThanks').classList.remove('hidden');
-        console.log("Gift preference:", gift);
-      }
-    }
-
-    function moveNo() {
-      const btn = document.getElementById('noBtn');
-      btn.style.transform =
-        `translate(${Math.random() * 200 - 100}px, ${Math.random() * 200 - 100}px)`;
-    }
-
-    function signOut() {
-      document.getElementById('page1').classList.add('hidden');
-      document.getElementById('page2').classList.add('hidden');
-      document.getElementById('page3').classList.add('hidden');
-      document.getElementById('login').classList.remove('hidden');
-      music.pause();
-      music.currentTime = 0;
-      input.value = '';
-      error.classList.add('hidden');
-    }
-
-    const hearts = document.getElementById('hearts');
-    setInterval(() => {
-      const h = document.createElement('div');
-      h.className = 'heart';
-      h.style.left = Math.random() * 100 + 'vw';
-      h.style.fontSize = Math.random() * 16 + 16 + 'px';
-      h.textContent = '💖';
-      hearts.appendChild(h);
-      setTimeout(() => h.remove(), 8000);
-    }, 500);
-  </script>
+setInterval(()=>{
+  const h=document.createElement("div");
+  h.className="heart"; h.textContent="💖";
+  h.style.left=Math.random()*100+"vw";
+  hearts.appendChild(h);
+  setTimeout(()=>h.remove(),8000);
+},500);
+</script>
 
 </body>
 </html>
