--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@ body { font-family: 'Poppins', sans-serif; }
 .heart{position:absolute;bottom:-20px;animation:drift 8s linear;font-size:20px}
 .falling-heart{position:absolute;font-size:1.8rem;animation:fall 3s linear}
 #bucket{position:absolute;bottom:6px;font-size:2.5rem}
+
+/* Slider styles */
+#slider { display: flex; width: 300vw; transition: transform 0.7s ease-in-out; }
+section { width: 100vw; min-height: 100vh; flex-shrink: 0; }
+.dot { transition: all 0.3s ease; }
 </style>
 </head>
 
@@ -34,7 +39,7 @@ body { font-family: 'Poppins', sans-serif; }
 </audio>
 
 <!-- LOGIN -->
-<section id="login" class="min-h-screen flex items-center justify-center pop">
+<section id="login" class="min-h-screen flex items-center justify-center pop absolute w-full">
   <div class="bg-white/90 p-10 rounded-3xl shadow-xl text-center border border-pink-300">
     <h1 class="script text-4xl text-pink-600 mb-4">Before You Enter 🤍</h1>
     <input id="nameInput" placeholder="Type your boyfriend's name"
@@ -43,60 +48,70 @@ body { font-family: 'Poppins', sans-serif; }
   </div>
 </section>
 
-<!-- PAGE 1 -->
-<section id="page1" class="hidden min-h-screen flex justify-center pt-10">
-<div class="bg-white/90 p-10 rounded-3xl shadow-xl text-center pop">
-  <div class="text-6xl float">💖</div>
-  <h1 class="script text-4xl text-pink-600">Hey Baby 🤍</h1>
+<!-- SLIDER -->
+<div id="slider" class="absolute top-0 left-0">
+  <!-- PAGE 1 -->
+  <section id="page1" class="flex justify-center pt-10">
+    <div class="bg-white/90 p-10 rounded-3xl shadow-xl text-center pop">
+      <div class="text-6xl float">💖</div>
+      <h1 class="script text-4xl text-pink-600">Hey Baby 🤍</h1>
 
-  <div id="balloonArea" class="relative w-64 h-64 bg-pink-50 rounded-2xl mt-6 overflow-hidden">
-    <div id="bucket">🪣</div>
-  </div>
+      <div id="balloonArea" class="relative w-64 h-64 bg-pink-50 rounded-2xl mt-6 overflow-hidden">
+        <div id="bucket">🪣</div>
+      </div>
 
-  <div id="proposal" class="hidden mt-6">
-    <h2 class="text-2xl text-pink-500 mb-4">Will you be my Valentine? 🤍</h2>
-    <button onclick="sayYes()" class="bg-pink-500 text-white px-6 py-3 rounded-full">Yes 😍</button>
-    <button id="noBtn" onmouseover="moveNo()" class="ml-2 bg-pink-100 px-6 py-3 rounded-full">No 🙈</button>
-  </div>
+      <div id="proposal" class="hidden mt-6">
+        <h2 class="text-2xl text-pink-500 mb-4">Will you be my Valentine? 🤍</h2>
+        <button onclick="sayYes()" class="bg-pink-500 text-white px-6 py-3 rounded-full">Yes 😍</button>
+        <button id="noBtn" onmouseover="moveNo()" class="ml-2 bg-pink-100 px-6 py-3 rounded-full">No 🙈</button>
+      </div>
+    </div>
+  </section>
+
+  <!-- PAGE 2 -->
+  <section id="page2" class="flex justify-center pt-10">
+    <div class="bg-white/90 p-10 rounded-3xl shadow-xl text-center pop">
+      <h2 class="script text-4xl text-pink-600 mb-6">For You 🤍</h2>
+      <p class="text-gray-700">You make life sweeter just by being you 💕</p>
+      <button onclick="goToGiftPage()" class="mt-6 bg-pink-500 text-white px-8 py-3 rounded-full">
+        Continue 💕
+      </button>
+    </div>
+  </section>
+
+  <!-- PAGE 3 -->
+  <section id="page3" class="flex justify-center pt-10">
+    <div class="bg-white/90 p-10 rounded-3xl shadow-xl text-center pop max-w-md">
+
+      <h2 class="script text-4xl text-pink-600 mb-4">One More Thing 🤍</h2>
+
+      <textarea id="giftInput" rows="4"
+        class="w-full p-4 border border-pink-300 rounded-2xl"
+        placeholder="I would love something like… 💝"></textarea>
+
+      <button onclick="submitGift()" class="mt-4 bg-pink-500 text-white px-6 py-3 rounded-full">
+        Save Gift 💌
+      </button>
+
+      <button onclick="viewGift()" class="mt-3 bg-pink-100 text-pink-600 px-6 py-2 rounded-full">
+        View Your Valentine’s Gift Request 💝
+      </button>
+
+      <button onclick="sendGiftWhatsApp()" class="mt-3 bg-green-500 text-white px-6 py-3 rounded-full">
+        Send via WhatsApp 💚
+      </button>
+
+      <p id="giftThanks" class="mt-4 text-pink-500 font-semibold hidden"></p>
+    </div>
+  </section>
 </div>
-</section>
 
-<!-- PAGE 2 -->
-<section id="page2" class="hidden min-h-screen flex justify-center pt-10">
-<div class="bg-white/90 p-10 rounded-3xl shadow-xl text-center pop">
-  <h2 class="script text-4xl text-pink-600 mb-6">For You 🤍</h2>
-  <p class="text-gray-700">You make life sweeter just by being you 💕</p>
-  <button onclick="goToGiftPage()" class="mt-6 bg-pink-500 text-white px-8 py-3 rounded-full">
-    Continue 💕
-  </button>
+<!-- SLIDER DOTS -->
+<div class="fixed bottom-6 left-1/2 -translate-x-1/2 flex gap-3 z-50">
+  <span class="dot w-3 h-3 rounded-full bg-pink-500"></span>
+  <span class="dot w-3 h-3 rounded-full bg-pink-200"></span>
+  <span class="dot w-3 h-3 rounded-full bg-pink-200"></span>
 </div>
-</section>
-
-<!-- PAGE 3 -->
-<section id="page3" class="hidden min-h-screen flex justify-center pt-10">
-<div class="bg-white/90 p-10 rounded-3xl shadow-xl text-center pop max-w-md">
-
-  <h2 class="script text-4xl text-pink-600 mb-4">One More Thing 🤍</h2>
-
-  <textarea id="giftInput" rows="4"
-    class="w-full p-4 border border-pink-300 rounded-2xl"
-    placeholder="I would love something like… 💝"></textarea>
-
-  <button onclick="submitGift()" class="mt-4 bg-pink-500 text-white px-6 py-3 rounded-full">
-    Save Gift 💌
-  </button>
-
-  <button onclick="viewGift()" class="mt-3 bg-pink-100 text-pink-600 px-6 py-2 rounded-full">
-    View Your Valentine’s Gift Request 💝
-  </button>
-
-  <button onclick="sendGiftWhatsApp()" class="mt-3 bg-green-500 text-white px-6 py-3 rounded-full">
-    Send via WhatsApp 💚
-  </button>
-
-  <p id="giftThanks" class="mt-4 text-pink-500 font-semibold hidden"></p>
-</div>
-</section>
 
 <script>
 const correctName = "Paakwesi";
@@ -105,11 +120,30 @@ let heartsCaught = 0;
 
 const input = document.getElementById("nameInput");
 const music = document.getElementById("bgm");
+const login = document.getElementById("login");
+const page1 = document.getElementById("page1");
+const page2 = document.getElementById("page2");
+const page3 = document.getElementById("page3");
+const error = document.getElementById("error");
+const balloonArea = document.getElementById("balloonArea");
+const bucket = document.getElementById("bucket");
+const proposal = document.getElementById("proposal");
+const giftInput = document.getElementById("giftInput");
+const giftThanks = document.getElementById("giftThanks");
+const noBtn = document.getElementById("noBtn");
+
+const slider = document.getElementById("slider");
+const dots = document.querySelectorAll(".dot");
+let currentPage = 0;
+
+function updateSlider() {
+  slider.style.transform = `translateX(-${currentPage * 100}vw)`;
+  dots.forEach((d,i) => d.className = i === currentPage ? "dot w-3 h-3 rounded-full bg-pink-500" : "dot w-3 h-3 rounded-full bg-pink-200");
+}
 
 input.addEventListener("keydown", e => {
   if (e.key === "Enter" && input.value.toLowerCase() === correctName.toLowerCase()) {
-    login.classList.add("hidden");
-    page1.classList.remove("hidden");
+    login.style.display = "none";
     music.play();
     startGame();
   } else if (e.key === "Enter") {
@@ -139,8 +173,8 @@ balloonArea.addEventListener("mousemove", e => {
   bucket.style.left = e.offsetX - 20 + "px";
 });
 
-function sayYes(){ page1.classList.add("hidden"); page2.classList.remove("hidden"); }
-function goToGiftPage(){ page2.classList.add("hidden"); page3.classList.remove("hidden"); }
+function sayYes(){ currentPage = 1; updateSlider(); }
+function goToGiftPage(){ currentPage = 2; updateSlider(); }
 
 function submitGift(){
   savedGift = giftInput.value.trim();
@@ -155,7 +189,6 @@ function viewGift(){
 
 function sendGiftWhatsApp(){
   if(!savedGift){ viewGift(); return; }
-
   const phoneNumber = "233535152853"; // 🔴 CHANGE THIS
   const message = `Hey my love 🤍✨\n\nMy Valentine’s gift request is:\n"${savedGift}" 💝`;
   window.open(`https://wa.me/${phoneNumber}?text=${encodeURIComponent(message)}`, "_blank");
@@ -172,6 +205,23 @@ setInterval(()=>{
   hearts.appendChild(h);
   setTimeout(()=>h.remove(),8000);
 },500);
+
+// Keyboard navigation
+document.addEventListener("keydown", e => {
+  if (e.key === "ArrowRight" && currentPage < 2) currentPage++;
+  if (e.key === "ArrowLeft" && currentPage > 0) currentPage--;
+  updateSlider();
+});
+
+// Swipe navigation
+let startX = 0;
+document.addEventListener("touchstart", e => startX = e.touches[0].clientX);
+document.addEventListener("touchend", e => {
+  let endX = e.changedTouches[0].clientX;
+  if (startX - endX > 50 && currentPage < 2) currentPage++;
+  if (endX - startX > 50 && currentPage > 0) currentPage--;
+  updateSlider();
+});
 </script>
 
 </body>
