--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ body { font-family: 'Poppins', sans-serif; }
 <section id="page2" class="hidden min-h-screen flex justify-center pt-10">
 <div class="bg-white/90 p-10 rounded-3xl shadow-xl text-center pop">
   <h2 class="script text-4xl text-pink-600 mb-6">For You 🤍</h2>
-  <p class="text-gray-700">You make life sweeter just by being you 💕</p>
+  <p class="text-gray-700">Happy Valentine’s Day,Every moment with you feels like a little piece of magic. You make my world brighter, my heart lighter, and my days sweeter just by being you. I’m so grateful for you today and always. 💕</p>
   <button onclick="goToGiftPage()" class="mt-6 bg-pink-500 text-white px-8 py-3 rounded-full">
     Continue 💕
   </button>
